# heartlib-mlx

./: .gitignore  README.md  app.py  generate.py  pyproject.toml  server.py
examples/: generate.py  tag_audio.py  transcribe.py
scripts/: benchmark.py  download_weights.py
src/heartlib_mlx/: __init__.py
src/heartlib_mlx/heartclap/: __init__.py  audio_encoder.py  configuration.py  modeling.py  text_encoder.py
src/heartlib_mlx/heartcodec/: __init__.py  configuration.py  flow_matching.py  modeling.py  scalar_codec.py
src/heartlib_mlx/heartmula/: __init__.py  backbone.py  decoder.py  modeling.py
src/heartlib_mlx/hearttranscriptor/: __init__.py  configuration.py  modeling.py
src/heartlib_mlx/nn/: __init__.py  conv.py  kv_cache.py  rope.py  transformer.py
src/heartlib_mlx/ode/: __init__.py  neural_ode.py
src/heartlib_mlx/pipelines/: __init__.py  audio_tagging.py  lyrics_transcription.py  music_generation.py
src/heartlib_mlx/utils/: __init__.py  audio.py  convert.py
tests/: __init__.py  generate_music_comparison.py  test_audio.py  test_heartmula_parity.py  test_nn.py  test_ode.py  test_parity.py  test_rope_parity.py  test_sampling.py  trace_attention.py  trace_backbone.py  trace_layer0.py
web/: app.js  index.html  styles.css
